welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:1: error: '(' expected but identifier found.
def sumDouble(a: Integer, b: Integer): Integer = {if a==b return 2*a else return a+b} 
                                                     ^sumDouble:1: error: illegal start of simple expression
def sumDouble(a: Integer, b: Integer): Integer = {if a==b return 2*a else return a+b} 
                                                                                    ^